--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "compression": "^1.8.1",
+    "connect-timeout": "^1.9.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csurf": "^1.2.2",
