--- a/backend/package.json
+++ b/backend/package.json
@@ -20,27 +20,31 @@
     "cors": "^2.8.5",
     "csurf": "^1.2.2",
     "dayjs": "^1.11.18",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^8.0.1",
+    "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "ioredis": "^5.7.0",
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongo-sanitize": "^1.1.0",
-    "mongoose": "^8.16.3",
+    "mongoose": "^8.18.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nanoid": "^5.1.5",
     "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
+    "redis": "^5.8.2",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
@@ -50,9 +54,12 @@
     "twilio": "^5.8.0",
     "useragent": "^2.3.0",
     "util": "^0.12.5",
+    "winston": "^3.17.0",
     "xss": "^1.0.15"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "jest": "^30.1.3",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
