--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "nanoid": "^5.1.5",
     "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
