--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
+    "prerender-node": "^3.8.3",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "redis": "^5.8.2",
