--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@sendgrid/mail": "^8.1.6",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.63.0",
     "cloudinary": "^1.41.3",
     "compression": "^1.8.1",
     "connect-mongo": "^5.1.0",
@@ -31,7 +32,7 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
-    "ioredis": "^5.7.0",
+    "ioredis": "^5.8.2",
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
