--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@sendgrid/mail": "^8.1.6",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "bull": "^4.16.5",
     "bullmq": "^5.63.0",
     "cloudinary": "^1.41.3",
     "compression": "^1.8.1",
