--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,12 @@
   "description": "",
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
-    "axios": "^1.11.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "bull": "^4.16.5",
     "bullmq": "^5.63.0",
-    "cloudinary": "^1.41.3",
+    "cheerio": "^1.1.2",
+    "cloudinary": "^2.8.0",
     "compression": "^1.8.1",
     "connect-mongo": "^5.1.0",
     "connect-timeout": "^1.9.1",
@@ -24,7 +25,7 @@
     "cors": "^2.8.5",
     "csurf": "^1.2.2",
     "dayjs": "^1.11.18",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
@@ -39,7 +40,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
     "mongo-sanitize": "^1.1.0",
-    "mongoose": "^8.18.1",
+    "mongoose": "^8.20.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
@@ -50,6 +51,9 @@
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
     "prerender-node": "^3.8.3",
+    "puppeteer": "^24.31.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "redis": "^5.8.2",
