--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
+    "p-limit": "^7.2.0",
     "pdfkit": "^0.17.2",
     "prerender-node": "^3.8.3",
     "puppeteer": "^24.31.0",
